--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </section>
     <section id="redes-sociais">
       <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
-      <a href="https://www.youtube.com" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
-      <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
-      <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
-      <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+      <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+      <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+      <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+      <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
 
 
 
